--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -131,15 +131,15 @@ The schedule for the different curricula are listed here:
       </tr>
       <tr><td>Morning</td> <td> <a href="https://kubdatalab.github.io/tidy-data-2022/">Data Organization in Spreadsheets</a></td></tr>
       <tr><td> </td><td><a href="https://kubdatalab.github.io/openrefine-2022/">OpenRefine for Data Cleaning</a></td></tr>
-      <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
+      <tr><td>Afternoon</td><td>Introduction to Python</td></tr>
       <tr> <td>Evening</td> <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>Morning</td> <td><a href="https://datacarpentry.org/r-socialsci/">Continuation of R: Data Analysis & Visualization</a></td></tr>
-      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-socialsci/">Data Management with SQL</a></td></tr>
+      <tr> <td>Morning</td> <td>Continuation of Python: Data Analysis & Visualization</td></tr>
+      <tr> <td>Afternoon</td><td>Inspiration and brainstorming analyses</td></tr>
       <tr>
 	<td>Evening</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
